--- a/index.html
+++ b/index.html
@@ -89,24 +89,38 @@
 
     .popup-more:hover { text-decoration: underline; }
 
-    .popup-image {
-      width: 100%;
-      margin-top: 10px;
-      border-radius: 12px;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-      display: none;
+    .full-popup {
+      position: fixed;
+      top: 10%;
+      left: 10%;
+      width: 80%;
+      height: 80%;
+      background: white;
+      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
+      border-radius: 16px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      z-index: 9999;
     }
 
-    .popup-close {
+    .full-popup img {
+      max-width: 90%;
+      max-height: 80%;
+      border-radius: 12px;
+    }
+
+    .full-popup .close-btn {
       position: absolute;
-      top: 8px;
-      right: 12px;
-      font-size: 20px;
+      top: 12px;
+      right: 20px;
+      font-size: 28px;
       font-weight: bold;
       color: #888;
       cursor: pointer;
     }
-    .popup-close:hover { color: #000; }
+    .full-popup .close-btn:hover { color: #000; }
   </style>
 </head>
 <body>
@@ -141,138 +155,29 @@
     moreBtn.className = 'popup-more';
     moreBtn.innerText = '더보기';
 
-    const image = document.createElement('img');
-    image.className = 'popup-image';
-    image.src = markerData.popupImg || 'title1.jpg';
-
     moreBtn.onclick = () => {
-      image.style.display = 'block';
-      moreBtn.style.display = 'none';
+      const fullPopup = document.createElement('div');
+      fullPopup.className = 'full-popup';
+
+      const closeFull = document.createElement('div');
+      closeFull.className = 'close-btn';
+      closeFull.innerHTML = '&times;';
+      closeFull.onclick = () => fullPopup.remove();
+
+      const image = document.createElement('img');
+      image.src = markerData.popupImg || 'title1.jpg';
+
+      fullPopup.append(closeFull, image);
+      document.body.appendChild(fullPopup);
     };
 
-    container.append(closeBtn, title, moreBtn, image);
+    container.append(closeBtn, title, moreBtn);
 
     activePopup = new mapboxgl.Popup({ offset: [0, -65], closeButton: false })
       .setLngLat([markerData.lng, markerData.lat])
       .setDOMContent(container)
       .addTo(map);
   }
-
-  map.on('dragstart', () => isUserInteracting = true);
-  map.on('zoomstart', () => isUserInteracting = true);
-  map.on('touchstart', () => isUserInteracting = true);
-  map.on('dragend', () => setTimeout(() => isUserInteracting = false, 2000));
-  map.on('zoomend', () => {
-    setTimeout(() => isUserInteracting = false, 2000);
-    updateMarkerVisibility();
-    if (userMarker) {
-      const userLngLat = userMarker.getLngLat();
-      showPopupIfNearby(userLngLat.lng, userLngLat.lat);
-    }
-  });
-
-  map.on('load', () => {
-    const tiles = [/* tile configs... */];
-    tiles.forEach(tile => {
-      map.addSource(tile.id, { type: 'image', url: tile.url, coordinates: tile.coords });
-      map.addLayer({ id: tile.id, type: 'raster', source: tile.id, paint: { 'raster-opacity': 1 } });
-    });
-    updateMarkerVisibility();
-  });
-
-  const markers = [
-    { lng: 126.79009, lat: 37.50089, img: 'cns1.png', title: '도시와 자연의 노래<br>푸른꿈의 정원', popupImg: 'title1.jpg' },
-    { lng: 126.79139, lat: 37.50200, img: 'cns2.png', title: '도시와 자연의 노래<br>맞이정원', popupImg: 'title2.jpg' },
-    { lng: 126.78976, lat: 37.50240, img: 'cs1.png', title: '도시의 하늘정원<br>구름정원', popupImg: 'title3.jpg' },
-    { lng: 126.78835, lat: 37.50166, img: 'cs2.png', title: '도시의 하늘정원<br>해봄정원', popupImg: 'title4.jpg' },
-    { lng: 126.79242, lat: 37.50066, img: 'lw1.png', title: '살아 있는 벽의 노래<br>기업쇼륨', popupImg: 'title5.jpg' },
-    { lng: 126.78995, lat: 37.49911, img: 'lw2.png', title: '살이 있는 벽의 노래<br>바이오월 페어', popupImg: 'title6.jpg' },
-    { lng: 126.78962, lat: 37.50340, img: 'ho1.png', title: '숨겨진 오아시스<br>베란다 정원', popupImg: 'title7.jpg' }
-  ];
-
-  markers.forEach(m => {
-    const el = document.createElement('div');
-    el.className = 'custom-marker';
-    const inner = document.createElement('div');
-    inner.className = 'marker-inner';
-    inner.style.backgroundImage = `url(${m.img})`;
-    el.appendChild(inner);
-    new mapboxgl.Marker(el, { offset: [0, -25] }).setLngLat([m.lng, m.lat]).addTo(map);
-    markerElements.push({ el, inner, lng: m.lng, lat: m.lat, title: m.title });
-
-    const blueDot = document.createElement('div');
-    blueDot.className = 'blue-dot';
-    new mapboxgl.Marker(blueDot).setLngLat([m.lng, m.lat]).addTo(map);
-    blueDotMarkers.push(blueDot);
-
-    el.addEventListener('click', () => showPopup(m));
-    el.addEventListener('touchstart', () => showPopup(m));
-  });
-
-  function updateMarkerVisibility() {
-    const zoom = map.getZoom();
-    markerElements.forEach((m, i) => {
-      if (zoom >= 16) {
-        m.el.style.visibility = 'visible';
-        m.el.style.opacity = 1;
-        blueDotMarkers[i].style.visibility = 'hidden';
-        blueDotMarkers[i].style.opacity = 0;
-      } else {
-        m.el.style.visibility = 'hidden';
-        m.el.style.opacity = 0;
-        blueDotMarkers[i].style.visibility = 'visible';
-        blueDotMarkers[i].style.opacity = 1;
-      }
-    });
-  }
-
-  function showPopupIfNearby(userLng, userLat) {
-    const zoom = map.getZoom();
-    let nearby = false;
-    markerElements.forEach(m => {
-      const distance = turf.distance([userLng, userLat], [m.lng, m.lat], { units: 'meters' });
-      if (zoom >= 16) {
-        m.inner.classList.remove('bounce');
-        if (distance < 100) m.inner.classList.add('bounce');
-        if (distance < 70) {
-          nearby = true;
-          if (!activePopup || activePopup._lngLat.lng !== m.lng || activePopup._lngLat.lat !== m.lat) {
-            showPopup(m);
-          }
-        }
-      } else {
-        m.inner.classList.remove('bounce');
-      }
-    });
-    if (!nearby && activePopup) {
-      activePopup.remove();
-      activePopup = null;
-    }
-  }
-
-  navigator.geolocation.watchPosition((position) => {
-    const { latitude, longitude } = position.coords;
-    if (!isUserInteracting) map.easeTo({ center: [longitude, latitude], duration: 1000 });
-
-    if (!userMarker) {
-      const el = document.createElement('div');
-      el.className = 'custom-marker';
-      el.style.visibility = 'visible';
-      el.style.opacity = 1;
-      const inner = document.createElement('div');
-      inner.className = 'marker-inner user-marker-inner';
-      inner.style.backgroundImage = 'url(dung1.gif)';
-      el.appendChild(inner);
-      userMarker = new mapboxgl.Marker(el, { offset: [0, -25] }).setLngLat([longitude, latitude]).addTo(map);
-    } else {
-      userMarker.setLngLat([longitude, latitude]);
-    }
-    showPopupIfNearby(longitude, latitude);
-  }, error => console.error("Geolocation error:", error), {
-    enableHighAccuracy: true,
-    maximumAge: 10000,
-    timeout: 10000
-  });
 </script>
 </body>
 </html>
