--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
       transform-origin: bottom center;
       will-change: transform;
     }
+
     .user-marker-inner {
       width: 130px;
       height: 130px;
@@ -41,9 +42,7 @@
       background-color: rgba(68, 142, 122, 0.4);
       border: 2px solid white;
       border-radius: 50%;
-      box-shadow:
-        0 0 10px 5px rgba(68, 142, 122, 0.3),
-        0 0 30px 15px rgba(68, 142, 122, 0.2);
+      box-shadow: 0 0 10px 5px rgba(68, 142, 122, 0.3), 0 0 30px 15px rgba(68, 142, 122, 0.2);
       visibility: hidden;
       opacity: 0;
       transition: visibility 0s, opacity 0.3s ease-in-out;
@@ -58,36 +57,57 @@
       animation: bounce 0.6s infinite;
     }
 
-    .mapboxgl-popup-tip {
-      display: none !important; /* ← 꼭짓점 제거 */
-    }
-    
-    .mapboxgl-popup-content {
-      background: transparent;
-      box-shadow: none;
-      padding: 0;
-    }
+    .mapboxgl-popup-tip { display: none !important; }
+    .mapboxgl-popup-content { background: transparent; box-shadow: none; padding: 0; }
+    .mapboxgl-popup-close-button { display: none; }
 
-    .mapboxgl-popup-close-button {
-      display: none;
-    }
-
-    .popup-content {
+    .popup-card {
       font-family: "Noto Sans KR", sans-serif;
-      background: rgba(255, 255, 255, 0.9);
-      border-radius: 50px;
-      padding: 10px 16px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.15);
-      color:#448e7a;
-      font-weight: 600;
-      font-size: 1.4em;
+      background: white;
+      border-radius: 16px;
+      padding: 12px 16px;
+      box-shadow: 0 4px 14px rgba(0,0,0,0.25);
+      position: relative;
+      max-width: 280px;
       text-align: center;
+    }
+
+    .popup-title {
+      font-size: 1.2em;
+      font-weight: 700;
+      color: #448e7a;
+      margin-bottom: 8px;
+    }
+
+    .popup-more {
+      font-size: 0.95em;
+      color: #448e7a;
+      cursor: pointer;
+      font-weight: 500;
+      border-top: 1px solid #eee;
+      padding-top: 8px;
+    }
+
+    .popup-more:hover { text-decoration: underline; }
+
+    .popup-image {
+      width: 100%;
+      margin-top: 10px;
+      border-radius: 12px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+      display: block;
+    }
+
+    .popup-close {
+      position: absolute;
+      top: 8px;
+      right: 12px;
+      font-size: 20px;
+      font-weight: bold;
+      color: #888;
       cursor: pointer;
     }
-
-    .popup-content:hover {
-      background: #f2f2f2;
-    }
+    .popup-close:hover { color: #000; }
   </style>
 </head>
 <body>
@@ -118,12 +138,42 @@
   const markerElements = [];
   const blueDotMarkers = [];
 
-  function showPopup(markerData) {
+  function showPopup(markerData, isImageExpanded = false) {
     if (activePopup) activePopup.remove();
-    const html = `<div class="popup-content" ${markerData.url ? `onclick=\"window.open('${markerData.url}', '_blank')\"` : ''}>${markerData.title}</div>`;
-    activePopup = new mapboxgl.Popup({ offset: [0, -65] })
+
+    const container = document.createElement('div');
+    container.className = 'popup-card';
+
+    const closeBtn = document.createElement('div');
+    closeBtn.className = 'popup-close';
+    closeBtn.innerHTML = '&times;';
+    closeBtn.onclick = () => {
+      activePopup.remove();
+      activePopup = null;
+    };
+
+    const title = document.createElement('div');
+    title.className = 'popup-title';
+    title.innerHTML = markerData.title;
+
+    container.append(closeBtn, title);
+
+    if (!isImageExpanded) {
+      const moreBtn = document.createElement('div');
+      moreBtn.className = 'popup-more';
+      moreBtn.innerText = '더보기';
+      moreBtn.onclick = () => showPopup(markerData, true);
+      container.append(moreBtn);
+    } else {
+      const image = document.createElement('img');
+      image.className = 'popup-image';
+      image.src = markerData.popupImg;
+      container.append(image);
+    }
+
+    activePopup = new mapboxgl.Popup({ offset: [0, -65], closeButton: false })
       .setLngLat([markerData.lng, markerData.lat])
-      .setHTML(html)
+      .setDOMContent(container)
       .addTo(map);
   }
 
@@ -160,13 +210,13 @@
   });
 
   const markers = [
-    { lng: 126.79009, lat: 37.50089, img: 'cns1.png', title: '도시와 자연의 노래<br>푸른꿈의 정원', url: 'https://botanicpark.seoul.go.kr/front/main.do' },
-    { lng: 126.79139, lat: 37.50200, img: 'cns2.png', title: '도시와 자연의 노래<br>맞이정원' },
-    { lng: 126.78976, lat: 37.50240, img: 'cs1.png', title: '도시의 하늘정원<br>구름정원' },
-    { lng: 126.78835, lat: 37.50166, img: 'cs2.png', title: '도시의 하늘정원<br>해봄정원' },
-    { lng: 126.79242, lat: 37.50066, img: 'lw1.png', title: '살아 있는 벽의 노래<br>기업쇼륨' },
-    { lng: 126.78995, lat: 37.49911, img: 'lw2.png', title: '살이 있는 벽의 노래<br>바이오월 페어' },
-    { lng: 126.78962, lat: 37.50340, img: 'ho1.png', title: '숨겨진 오아시스<br>베란다 정원' }
+    { lng: 126.79009, lat: 37.50089, img: 'cns1.png', title: '도시와 자연의 노래<br>푸른꿈의 정원', popupImg: 'title1.png' },
+    { lng: 126.79139, lat: 37.50200, img: 'cns2.png', title: '도시와 자연의 노래<br>맞이정원', popupImg: 'title2.png' },
+    { lng: 126.78976, lat: 37.50240, img: 'cs1.png', title: '도시의 하늘정원<br>구름정원', popupImg: 'title3.png' },
+    { lng: 126.78835, lat: 37.50166, img: 'cs2.png', title: '도시의 하늘정원<br>해봄정원', popupImg: 'title4.png' },
+    { lng: 126.79242, lat: 37.50066, img: 'lw1.png', title: '살아 있는 벽의 노래<br>기업쇼륨', popupImg: 'title5.png' },
+    { lng: 126.78995, lat: 37.49911, img: 'lw2.png', title: '살이 있는 벽의 노래<br>바이오월 페어', popupImg: 'title6.png' },
+    { lng: 126.78962, lat: 37.50340, img: 'ho1.png', title: '숨겨진 오아시스<br>베란다 정원', popupImg: 'title7.png' }
   ];
 
   markers.forEach(m => {
@@ -177,7 +227,7 @@
     inner.style.backgroundImage = `url(${m.img})`;
     el.appendChild(inner);
     new mapboxgl.Marker(el, { offset: [0, -25] }).setLngLat([m.lng, m.lat]).addTo(map);
-    markerElements.push({ el, inner, lng: m.lng, lat: m.lat, title: m.title, url: m.url });
+    markerElements.push({ el, inner, lng: m.lng, lat: m.lat, title: m.title, popupImg: m.popupImg });
 
     const blueDot = document.createElement('div');
     blueDot.className = 'blue-dot';
