--- a/index.html
+++ b/index.html
@@ -86,6 +86,9 @@
       font-weight: 500;
       border-top: 1px solid #eee;
       padding-top: 8px;
+      border-bottom: 2px solid #448e7a; /* ← 밑줄 추가 */
+      display: inline-block;            /* ← 밑줄 길이 조절 가능하도록 */
+      padding-bottom: 4px;
     }
 
     .popup-more:hover { text-decoration: underline; }
