--- a/index.html
+++ b/index.html
@@ -86,9 +86,8 @@
       font-weight: 500;
       border-top: 1px solid #eee;
       padding-top: 8px;
-      border-bottom: 2px solid #448e7a; /* ← 밑줄 추가 */
-      display: inline-block;            /* ← 밑줄 길이 조절 가능하도록 */
-      padding-bottom: 4px;
+      text-decoration: underline; /* ← 밑줄 추가 */
+      text-underline-offset: 2px; /* ← 밑줄 위치 조금 아래로 */
     }
 
     .popup-more:hover { text-decoration: underline; }
