--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
       font-weight: 500;
       border-top: 1px solid #eee;
       padding-top: 8px;
-      text-decoration: underline; /* ← 밑줄 추가 */
-      text-underline-offset: 4px; /* ← 밑줄 위치 조금 아래로 */
+      text-decoration: underline;
+      text-underline-offset: 3px;
     }
 
     .popup-more:hover { text-decoration: underline; }
@@ -124,7 +124,7 @@
       position: absolute;
       top: 8px;
       right: 12px;
-      font-size: 24px;
+      font-size: 35px;
       font-weight: bold;
       color: #888;
       cursor: pointer;
