--- a/index.html
+++ b/index.html
@@ -126,10 +126,15 @@
       right: 12px;
       font-size: 35px;
       font-weight: bold;
-      color: #888;
+      color: #555;
       cursor: pointer;
+      width: 40px;           /* ← 클릭 영역 확대 */
+      height: 40px;
+      line-height: 40px;
+      text-align: center;
+      border-radius: 50%;    /* ← 동그란 버튼처럼 보여줌 (선택사항) */
+      background-color: rgba(255,255,255,0.8); /* 배경 강조 (선택사항) */
     }
-    .popup-close:hover { color: #000; }
   </style>
 </head>
 <body>
