--- a/index.html
+++ b/index.html
@@ -122,12 +122,18 @@
     
     .popup-close {
       position: absolute;
-      top: 8px;
-      right: 12px;
+      top: 6px;
+      right: 6px;
       font-size: 35px;
       font-weight: bold;
       color: #888;
       cursor: pointer;
+      width: 40px;
+      height: 40px;
+      line-height: 40px;
+      text-align: center;
+      border-radius: 50%;
+      background-color: rgba(255,255,255,0.8);
     }
   </style>
 </head>
