--- a/index.html
+++ b/index.html
@@ -9,7 +9,41 @@
   <link href="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css" rel="stylesheet" />
   <style>
     body, html { margin: 0; padding: 0; height: 100dvh; }
-    #map { width: 100%; height: 100%; }
+    #map { width: 100%; height: 100%; display: none; }
+
+    #prologue {
+      position: fixed;
+      top: 0; left: 0;
+      width: 100vw; height: 100vh;
+      background: #000;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      z-index: 2000;
+    }
+    #prologue img {
+      width: 100vw;
+      height: 100vh;
+      object-fit: cover;
+    }
+    #enter-button {
+      position: absolute;
+      bottom: 40px;
+      right: 30px;
+      background: rgba(255, 255, 255, 0.9);
+      color: #448e7a;
+      font-size: 18px;
+      padding: 12px 20px;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      font-weight: bold;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.3);
+    }
+    #enter-button:hover {
+      background: #fff;
+    }
 
     .custom-marker {
       width: 75px;
@@ -146,7 +180,11 @@
   </style>
 </head>
 <body>
-  
+  <div id="prologue">
+  <img src="prologue.jpg" alt="Intro Image">
+  <button id="enter-button" onclick="enterMap()">지도로 넘어가기</button>
+</div>
+
 <div id="popup-overlay" style="display: none;">
   <div class="popup-image-wrapper">
     <img id="popup-image" src="" alt="popup" />
@@ -157,6 +195,10 @@
 <div id="map"></div>
 <script>
   mapboxgl.accessToken = 'pk.eyJ1IjoidGFrZWJ1Y2hpaGFydSIsImEiOiJjbThyOWk5bnowamx1MmtzY3NqM3h4NGg1In0.z8tX24NQPHkZY_GwSLsc9Q';
+  function enterMap() {
+    document.getElementById('prologue').style.display = 'none';
+    document.getElementById('map').style.display = 'block';
+  }
 
   const map = new mapboxgl.Map({
     container: 'map',
