--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 </head>
 <body>
   <div id="prologue">
-  <img src="prologue.jpg" alt="Intro Image">
+  <img src="prologue.jpeg" alt="Intro Image">
   <button id="enter-button" onclick="enterMap()">지도로 넘어가기</button>
 </div>
 
