--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
     }
     #enter-button {
       position: absolute;
-      bottom: 80px;
-      right: 30px;
+      bottom: 120px;
+      right: 50%;
+      transform: translateX(-50%);
       background: rgba(255, 255, 255, 0.9);
       color: #448e7a;
       font-size: 18px;
