--- a/index.html
+++ b/index.html
@@ -23,14 +23,15 @@
       z-index: 2000;
     }
     #prologue img {
-      width: 100vw;
-      height: 100vh;
+      width: 100%;
+      height: 100%;
       object-fit: cover;
     }
     #enter-button {
       position: absolute;
       bottom: 100px;
-      right: 50%;
+      left: 50%;
+      transform: translateX(-50%);
       background: rgba(255, 255, 255, 0.9);
       color: #448e7a;
       font-size: 18px;
@@ -40,6 +41,7 @@
       cursor: pointer;
       font-weight: bold;
       box-shadow: 0 4px 10px rgba(0,0,0,0.3);
+      white-space: nowrap;
     }
     #enter-button:hover {
       background: #fff;
