--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
       z-index: 2000;
     }
     #prologue img {
-      width: 100%;
-      height: 100%;
+      width: 100vw;
+      height: 100vh;
       object-fit: cover;
     }
     #enter-button {
