--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     #prologue img {
       width: 100%;
       height: 100%;
-      object-fit: cover;
+      object-fit: fill;
     }
     #enter-button {
       position: absolute;
