--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       pointer-events: none;
       transition: opacity 0.3s ease;
     }
-    
+
     #prologue {
       position: fixed;
       top: 0; left: 0;
@@ -203,15 +203,20 @@
 <div id="map"></div>
 <script>
   mapboxgl.accessToken = 'pk.eyJ1IjoidGFrZWJ1Y2hpaGFydSIsImEiOiJjbThyOWk5bnowamx1MmtzY3NqM3h4NGg1In0.z8tX24NQPHkZY_GwSLsc9Q';
-  function enterMap() {
-    document.getElementById('prologue').style.display = 'none';
-    
-    const mapEl = document.getElementById('map');
-    mapEl.style.opacity = '1';
-    mapEl.style.pointerEvents = 'auto';
-  
+function enterMap() {
+  document.getElementById('prologue').style.display = 'none';
+
+  const mapEl = document.getElementById('map');
+  mapEl.style.display = 'block'; // 그대로 유지
+
+  // 핵심! 렌더 완료 이후에 resize를 2회 반복
+  requestAnimationFrame(() => {
     map.resize();
-  }
+    requestAnimationFrame(() => {
+      map.resize();
+    });
+  });
+}
 
   const map = new mapboxgl.Map({
     container: 'map',
