--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
     #map {
       width: 100%;
       height: 100%;
-      opacity: 0;
-      pointer-events: none;
-      transition: opacity 0.3s ease;
+      visibility: hidden;
     }
 
     #prologue {
@@ -203,20 +201,20 @@
 <div id="map"></div>
 <script>
   mapboxgl.accessToken = 'pk.eyJ1IjoidGFrZWJ1Y2hpaGFydSIsImEiOiJjbThyOWk5bnowamx1MmtzY3NqM3h4NGg1In0.z8tX24NQPHkZY_GwSLsc9Q';
-function enterMap() {
-  document.getElementById('prologue').style.display = 'none';
-
-  const mapEl = document.getElementById('map');
-  mapEl.style.display = 'block'; // 그대로 유지
-
-  // 핵심! 렌더 완료 이후에 resize를 2회 반복
-  requestAnimationFrame(() => {
-    map.resize();
+  function enterMap() {
+    document.getElementById('prologue').style.display = 'none';
+    
+    const mapEl = document.getElementById('map');
+    mapEl.style.visibility = 'visible'; // ✅ 변경된 포인트
+  
+    // 아이폰 대응을 위해 requestAnimationFrame 2단계 사용
     requestAnimationFrame(() => {
       map.resize();
+      requestAnimationFrame(() => {
+        map.resize();
+      });
     });
-  });
-}
+  }
 
   const map = new mapboxgl.Map({
     container: 'map',
