--- a/index.html
+++ b/index.html
@@ -11,13 +11,10 @@
     body, html { margin: 0; padding: 0; height: 100dvh; }
     #map {
       opacity: 0;
-      visibility: hidden;
       transition: opacity 0.3s ease;
     }
-    
     #map.visible {
       opacity: 1;
-      visibility: visible;
     }
 
     #prologue {
@@ -212,12 +209,10 @@
     const mapEl = document.getElementById('map');
     mapEl.classList.add('visible');
   
-    requestAnimationFrame(() => {
+    // iOS에서 안정성을 위해 충분한 지연 후 resize 실행
+    setTimeout(() => {
       map.resize();
-      requestAnimationFrame(() => {
-        map.resize();
-      });
-    });
+    }, 300); // 최소 300ms 이상이 효과적
   }
 
   const map = new mapboxgl.Map({
