--- a/index.html
+++ b/index.html
@@ -10,11 +10,16 @@
   <style>
     body, html { margin: 0; padding: 0; height: 100dvh; }
     #map {
+      width: 100vw;
+      height: 100vh;
       opacity: 0;
+      pointer-events: none;
       transition: opacity 0.3s ease;
     }
+    
     #map.visible {
       opacity: 1;
+      pointer-events: auto;
     }
 
     #prologue {
@@ -204,15 +209,18 @@
 <script>
   mapboxgl.accessToken = 'pk.eyJ1IjoidGFrZWJ1Y2hpaGFydSIsImEiOiJjbThyOWk5bnowamx1MmtzY3NqM3h4NGg1In0.z8tX24NQPHkZY_GwSLsc9Q';
   function enterMap() {
-    document.getElementById('prologue').style.display = 'none';
-  
+    const prologue = document.getElementById('prologue');
     const mapEl = document.getElementById('map');
+  
+    prologue.style.display = 'none';
     mapEl.classList.add('visible');
   
-    // iOS에서 안정성을 위해 충분한 지연 후 resize 실행
-    setTimeout(() => {
-      map.resize();
-    }, 300); // 최소 300ms 이상이 효과적
+    // iOS Safari 대응: 2번의 animation frame을 사용한 안전한 resize 처리
+    requestAnimationFrame(() => {
+      requestAnimationFrame(() => {
+        map.resize();
+      });
+    });
   }
 
   const map = new mapboxgl.Map({
