--- a/index.html
+++ b/index.html
@@ -252,6 +252,16 @@
       });
     }
 
+    function updateZoomHint() {
+      const zoom = map.getZoom();
+      const hint = document.getElementById('zoom-hint');
+      if (zoom <= 15.2) {
+        hint.style.display = 'block';
+      } else if (zoom >= 16.3) {
+        hint.style.display = 'none';
+      }
+    }
+
     function showPopup(markerData, isImageExpanded = false) {
       if (activePopup) activePopup.remove();
       if (!isImageExpanded) {
