--- a/index.html
+++ b/index.html
@@ -215,6 +215,7 @@
       }
       loadTile();
     });
+    map.on('zoom', updateZoomHint);
 
     const markers = [
     { lng: 126.83552, lat: 37.56910, img: 'cns1.png', title: '푸른꿈의 정원', popupImg: 'title1.png' },
@@ -259,11 +260,7 @@
     function updateZoomHint() {
       const zoom = map.getZoom();
       const hint = document.getElementById('zoom-hint');
-      if (zoom <= 15) {
-        hint.style.display = 'block';
-      } else if (zoom >= 16.4) {
-        hint.style.display = 'none';
-      }
+      hint.style.display = zoom >= 16.4 ? 'none' : 'block';
     }
 
     function showPopup(markerData, isImageExpanded = false) {
