--- a/index.html
+++ b/index.html
@@ -21,10 +21,19 @@
       width: 100%; height: 100%; object-fit: fill;
     }
     #enter-button {
-      position: absolute; bottom: 100px; left: 50%; transform: translateX(-50%);
-      background: rgba(255, 255, 255, 0.9); color: #448e7a; font-size: 18px;
-      padding: 12px 20px; border: none; border-radius: 8px; cursor: pointer;
-      font-weight: bold; box-shadow: 0 4px 10px rgba(0,0,0,0.3);
+      position: absolute;
+      bottom: 40px;
+      left: 50%;
+      transform: translateX(-50%);
+      background: rgba(255, 255, 255, 0.9);
+      color: #448e7a;
+      font-size: 18px;
+      padding: 12px 20px;
+      border: none;
+      border-radius: 8px;
+      font-weight: bold;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.3);
+      z-index: 1500;
     }
 
     #zoom-hint {
@@ -138,7 +147,8 @@
 <body>
   <div id="prologue">
     <img src="prologue.jpeg" alt="Intro Image">
-    <button id="enter-button" onclick="enterMap()">지도로 넘어가기</button>
+  </div>
+  <button id="enter-button" onclick="enterMap()">지도로 넘어가기</button>
   </div>
 
   <div id="zoom-hint" style="display: none;">지도를 확대해 주세요</div>
