--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
       showPopupIfNearby(longitude, latitude);
     }, error => {
       console.error("Geolocation error:", error);
-      alert("📍 위치 권한이 필요합니다. 설정에서 허용해 주세요.");
+      alert("📍 위치 권한이 필요합니다.<br>설정에서 허용해 주세요.");
     }, {
       enableHighAccuracy: true,
       maximumAge: 10000,
